[gd_scene load_steps=6 format=2]

[ext_resource path="res://Worlds/MoonTown/Assets/Ground_Passenger_Pod/Ground_Passenger_Pod.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/TourPod/PassengerPodDocking.gd" type="Script" id=2]
[ext_resource path="res://Actors/TourPod/PassengerPodPlaceholder.tscn" type="PackedScene" id=3]
[ext_resource path="res://Worlds/MoonTown/Assets/Airlock/Airlock.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.123321, 0.130295, 0.487466 )

[node name="PassengerPodDocking" type="Spatial"]
script = ExtResource( 2 )

[node name="PassengerEnteredAirlock" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.94614 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="PassengerEnteredAirlock"]
shape = SubResource( 1 )

[node name="PassengerPodPlaceholder" parent="." instance=ExtResource( 3 )]

[node name="Ground_Passenger_Pod" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Airlock" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0107578, 1.43059 )
[connection signal="body_entered" from="PassengerEnteredAirlock" to="." method="_passenger_entered"]
